fix: modal dropdown overflow fixed

--- a/public/ned.css
+++ b/public/ned.css
@@ -69,3 +69,6 @@ body {
 .collapse {
 	margin-top:7px;
 }
+
+.modal { overflow: visible; }
+.modal-body { overflow-y: visible; }
